Add style to buttons because it is nice

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,42 @@
 .App-link {
   color: #09d3ac;
 }
+
+button {
+  appearance: none;
+  margin: 8px;
+  padding: 12px 16px;
+  border-radius: 4px;
+  border: none;
+  background: #9400d388;
+  font-weight: bold;
+  box-shadow: 0 1px 4px #0008;
+  cursor: pointer;
+  color: #fff;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+button:nth-of-type(7n + 1) {
+  background: #ff000088;
+}
+button:nth-of-type(7n + 2) {
+  background: #9400d388;
+}
+button:nth-of-type(7n + 3) {
+  background: #4b008288;
+}
+button:nth-of-type(7n + 4) {
+  background: #0000ff88;
+}
+button:nth-of-type(7n + 5) {
+  background: #00ff0088;
+}
+button:nth-of-type(7n + 6) {
+  background: #ffff0088;
+}
+button:nth-of-type(7n + 7) {
+  background: #ff7f0088;
+}
